2023-08-18T00:31:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5897345694 # 1832
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 718 1334
* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 718 1335
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-08-17]

2023-08-17T08:08:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5888380243 # 1830
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-17
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 717 1333
* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 718 1334
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-17]

2023-08-16T16:08:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5881177142 # 1828
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 717 1332
* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 717 1333
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-08-16]

2023-08-16T08:09:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5876272333 # 1827