@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-18T00:31:17Z",
+  "timestamp" : "2023-08-20T16:07:19Z",
   "count_outdated" : 1314,
   "uniques_outdated" : 707,
-  "count" : 1335,
-  "uniques" : 718,
+  "count" : 1337,
+  "uniques" : 719,
   "clones" : [
     {
       "timestamp": "2023-08-08T00:00:00Z",
@@ -90,6 +90,15 @@
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
