@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 3,
+  "count": 23,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-08-08T00:00:00Z",
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2023-08-17T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-20T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
