@@ -1,3 +1,12 @@
+2023-08-20T16:07:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5918364852 # 1840
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
+* notice: last 14d: unq all: 4 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 718 1335
+* notice: next accum: outdated-unq outdated-all / unq all: 707 1314 / 719 1337
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-08-20]
+
 2023-08-18T00:31:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5897345694 # 1832
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
